fixed align lang-btn

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,6 @@ h1 {
   background: #eceef4;
   width: 171px;
   white-space: nowrap;
-  width: 64px;
   color: #a5abc5;
   padding: 0 50px 0 43px;
   line-height: 50px;
